# manta-api

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: gen_key.rs  quick_dev.rs
manta-api/: Cargo.toml
manta-api-logic/: Cargo.toml
manta-api-logic/src/: lib.rs
manta-api-logic/src/services/: send.rs
manta-api/src/: error.rs  main.rs
manta-wallet/: package.json
manta-wallet/src/: App.tsx  types.d.ts
manta-wallet/src/pages/dashboard/: index.tsx
sql/: 00-recreate-db.sql  01-create-schema.sql  02-dec-seed.sql
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: config.rs  error.rs  main.rs  model.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  mod.rs  password.rs  pwd.rs  token.rs
src/ctx/: error.rs  mod.rs
src/log/: mod.rs
src/model/: account.rs  base.rs  card.rs  contact.rs  error.rs  mod.rs  payment.rs  send.rs  send_req.rs  task.rs  user.rs
src/model/store/: error.rs  mod.rs
src/utils/: error.rs  mod.rs
src/web/: accounts_routes.rs  cards_routes.rs  contacts_routes.rs  error.rs  login_routes.rs  mod.rs  mw_auth.rs  mw_req_stamp.rs  mw_res_map.rs  payments_routes.rs  static_routes.rs
src/web/rpc/: account_rpc.rs  card_rpc.rs  contact_rpc.rs  mod.rs  payment_rpc.rs  send_req_rpc.rs  send_rpc.rs  user_rpc.rs
wallet/: index.html
web-folder/: index.html
web-folder/kplc-app/: package.json
web-folder/kplc-app/src/: App.tsx
web-folder/kplc-app/src-tauri/: Cargo.toml  tauri.conf.json
web-folder/kplc-app/src/pages/dashboard/: index.tsx
web-folder/wallet/: index.html
web-folder/wallet-app/: package.json
web-folder/wallet-app/prisma/: schema.prisma
web-folder/wallet-app/src-tauri/: Cargo.toml  tauri.conf.json
web-folder/wallet-app/src/components/: NavBar.tsx
web-folder/wallet-app/src/pages/dashboard/: index.tsx
web-folder/wallet-app/src/routes/: index.tsx
web-folder/wallet-web-app/: package.json
web-folder/wallet-web-app/src/components/: Login.tsx  NavBar.tsx  NewUser.tsx  Utilities.tsx  index.ts
web-folder/wallet-web-app/src/pages/: _app.tsx  index.tsx
web-folder/wallet-web-app/src/pages/api/auth/: [...nextauth].ts
web-folder/wallet-web-app/src/pages/apps/: index.tsx
web-folder/wallet-web-app/src/pages/cards/: index.tsx
web-folder/wallet-web-app/src/pages/chat/: ChatLine.tsx  index.tsx
web-folder/wallet-web-app/src/pages/contacts/: index.tsx
web-folder/wallet-web-app/src/pages/dashboard/: index.tsx
web-folder/wallet-web-app/src/pages/wallet/: Card.tsx  Contact.tsx  Deposit.tsx  Send.tsx  Withdraw.tsx  index.tsx
web-folder/wallet-web-app/src/server/: _app.ts
web-folder/wallet-web-app/src/server/routers/: _app.ts  account.ts  card.ts  chat.ts  contact.ts  index.ts  payment.ts
web-folder/wallet-web-app/src/utils/: trpc.ts
