[package]
name = "manta-api"
version = "0.1.0"
edition = "2021"
authors = ["Pheon-Dev <devpheon@gmail.com"]
license = "MIT OR Apache-2.0"
description = "Mata API"
repository = "https://github.com/Pheon-Dev/manta-api"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
# Serde / json
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
serde_with = "3.0.0"
# Axum
axum = "0.6.18"
tower-http = { version = "0.4.1", features = ["fs"] }
tower-cookies = "0.9.0"
# Others
lazy-regex = "2.5.0"
async-trait = "0.1.69"
strum_macros = "0.25.1"
uuid = {version = "1.4.0", features = ["v4","fast-rng",]}
# Utoipa
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }

[dev-dependencies]
anyhow = "1.0.71"
httpc-test = "0.1.4"
