[package]
name = "manta-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = "0.6.18"
base64-url = "2.0.0"
hmac = "0.12.1"
httpc-test = "0.1.4"
lazy-regex = "2.5.0"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
serde_with = { version = "3.0.0", features = ["time_0_3"] }
serial_test = "2.0.0"
sha2 = "0.10.7"
sqlb = "0.3.2"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
strum_macros = "0.25.0"
thiserror = "1.0.40"
time = "0.3.22"
tokio = { version = "1.28.2", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.4", features = ["v4", "fast-rng"] }
manta-api-logic = { path = "../manta-api-logic" }
